--- a/Src/CustomerManagement/MainWindow.xaml
+++ b/Src/CustomerManagement/MainWindow.xaml
@@ -11,7 +11,9 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="80"></RowDefinition>
             <RowDefinition></RowDefinition>
+            <!-- 
             <RowDefinition Height="80"></RowDefinition>
+            -->
             <RowDefinition Height="20" />
         </Grid.RowDefinitions>
 
@@ -25,5 +27,6 @@
             <TabItem Header="Tab 2" Content="Hello, World" />
         </TabControl>
 
+        <userControls:FooterBar Grid.Row="3" />
     </Grid>
 </Window>
