--- a/Src/CustomerManagement/View/UserControls/CustomerDataGrid.xaml
+++ b/Src/CustomerManagement/View/UserControls/CustomerDataGrid.xaml
@@ -8,7 +8,7 @@
              Loaded="Window_Loaded"
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
-        <DataGrid AutoGenerateColumns="False" Name="CustomerTable" RowEditEnding="CustomerTable_RowEditEnding">
+        <DataGrid AutoGenerateColumns="False" IsReadOnly="True" Name="CustomerTable">
             <DataGrid.Columns>
                 <DataGridTextColumn Header="Customer ID" Binding="{Binding Id, UpdateSourceTrigger=PropertyChanged}" />
                 <DataGridTextColumn Header="Account Name" Binding="{Binding CompanyName, UpdateSourceTrigger=PropertyChanged}" />
