--- a/Src/CustomerManagement/App.xaml
+++ b/Src/CustomerManagement/App.xaml
@@ -4,6 +4,11 @@
              xmlns:local="clr-namespace:CustomerManagement"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="Styles\TextBoxStyles.xaml" />
+                <ResourceDictionary Source="Styles\TextBlockStyles.xaml" />
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
