--- a/Src/CustomerManagement/MainWindow.xaml
+++ b/Src/CustomerManagement/MainWindow.xaml
@@ -5,25 +5,20 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:userControls="clr-namespace:CustomerManagement.View.UserControls"
         xmlns:local="clr-namespace:CustomerManagement"
+        xmlns:view="clr-namespace:CustomerManagement.View"
         WindowStartupLocation="CenterScreen"
         Title="CMS" Height="900" Width="1500">
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="80" />
+            <RowDefinition Height="30" />
             <RowDefinition />
             <RowDefinition Height="20" />
         </Grid.RowDefinitions>
 
         <userControls:MenuBar />
 
-        <TabControl Name="TabCollection" Grid.Row="1">
-            <TabItem  Header="Main Details">
-                <userControls:CustomerDataGrid x:Name="CustomerDataGrid" Grid.Row="1" />
-            </TabItem>
+        <view:CustomersView Grid.Row="1"/>
 
-            <TabItem Header="Tab 2" Content="Hello, World" />
-        </TabControl>
-
-        <userControls:FooterBar Grid.Row="3" />
+        <userControls:FooterBar Grid.Row="2" />
     </Grid>
 </Window>
