--- a/Src/CustomerManagement/View/CustomersView.xaml
+++ b/Src/CustomerManagement/View/CustomersView.xaml
@@ -1,20 +1,33 @@
-﻿<UserControl x:Class="CustomerManagement.View.UserControls.CustomerDataGrid"
+﻿<UserControl x:Class="CustomerManagement.View.CustomersView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:CustomerManagement.View.UserControls"
+             xmlns:local="clr-namespace:CustomerManagement.View"
              mc:Ignorable="d" 
-             Loaded="Window_Loaded"
-             d:DesignHeight="450" d:DesignWidth="800">
+             d:DesignHeight="700" d:DesignWidth="1500">
     <Grid>
-        <DataGrid AutoGenerateColumns="False" IsReadOnly="True" Name="CustomerTable">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="50" />
+            <RowDefinition />
+        </Grid.RowDefinitions>
+
+        <StackPanel Grid.Row="0" Orientation="Horizontal" Background="LightBlue">
+            <Button Name="NewCustomerButton" Grid.Column="0" Width="100" Margin="5" Content="New Customer" />
+            <Button Grid.Column="1" Width="100" Margin="5" Content="Edit Customer" />
+        </StackPanel>
+
+        <DataGrid Grid.Row="1" ItemsSource="{Binding Customers}" AutoGenerateColumns="False" IsReadOnly="True" Name="CustomerTable">
             <DataGrid.Columns>
+                <DataGridTextColumn Header="First Name" Binding="{Binding FirstName}" />
+                <DataGridTextColumn Header="Last Name" Binding="{Binding LastName}" />
+                <!-- 
                 <DataGridTextColumn Header="Customer ID" Binding="{Binding Id, UpdateSourceTrigger=PropertyChanged}" />
                 <DataGridTextColumn Header="Account Name" Binding="{Binding CompanyName, UpdateSourceTrigger=PropertyChanged}" />
                 <DataGridTextColumn Header="Business Contact" Binding="{Binding BusinessContact, UpdateSourceTrigger=PropertyChanged}" />
                 <DataGridTextColumn Header="Email" Binding="{Binding EmailAddress, UpdateSourceTrigger=PropertyChanged}" />
                 <DataGridTextColumn Header="Phone" Binding="{Binding ContactNumber, UpdateSourceTrigger=PropertyChanged}" />
+                -->
             </DataGrid.Columns>
         </DataGrid>
     </Grid>
