--- a/Src/CustomerManagement/View/UserControls/MenuBar.xaml
+++ b/Src/CustomerManagement/View/UserControls/MenuBar.xaml
@@ -5,11 +5,10 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:CustomerManagement.View.UserControls"
              mc:Ignorable="d" 
-             d:Height="80" d:DesignWidth="1500">
+             d:Height="30" d:DesignWidth="1500">
     <Grid Background="LightBlue">
         <Grid.RowDefinitions>
-            <RowDefinition Height="30" />
-            <RowDefinition Height="50" />
+            <RowDefinition />
         </Grid.RowDefinitions>
 
         <Border Grid.Row="0" BorderBrush="Black" Background="Transparent" BorderThickness="0,0,0,2">
@@ -25,18 +24,12 @@
                     <MenuItem Header="Copy" />
                     <MenuItem Header="Paste" />
                 </MenuItem>
+                <MenuItem Header="View" FontSize="12">
+                    <MenuItem Header="Customers" />
+                    <MenuItem Header="Products" />
+                    <MenuItem Header="Subscriptions" />
+                </MenuItem>
             </Menu>
         </Border>
-
-        <Grid Margin="0,30,0,0" Grid.RowSpan="2">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition />
-            </Grid.ColumnDefinitions>
-
-            <StackPanel Orientation="Horizontal">
-                <Button Name="NewCustomerButton" Grid.Column="0" Width="100" Margin="5" Content="New Customer" Click="NewCustomerButton_Click" />
-                <Button Grid.Column="1" Width="100" Margin="5" Content="Edit Customer" />
-            </StackPanel>
-        </Grid>
     </Grid>
 </UserControl>
