--- a/Src/CustomerManagement/App.xaml
+++ b/Src/CustomerManagement/App.xaml
@@ -8,6 +8,7 @@
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="Styles\TextBoxStyles.xaml" />
                 <ResourceDictionary Source="Styles\TextBlockStyles.xaml" />
+                <ResourceDictionary Source="Styles\ButtonStyles.xaml" />
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
