--- a/Src/CustomerManagement/Styles/TextBlockStyles.xaml
+++ b/Src/CustomerManagement/Styles/TextBlockStyles.xaml
@@ -1,8 +1,4 @@
-﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    <!-- 
-    HorizontalAlignment="Left" FontSize="16" Height="40" Padding="0,10,0,0" Margin="30,0,0,0"
-    -->
+﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <Style TargetType="TextBlock" x:Key="FormTextBlock">
         <Setter Property="HorizontalAlignment" Value="Left" />
         <Setter Property="Height" Value="40" />
