--- a/Src/CustomerManagement/View/CustomersView.xaml
+++ b/Src/CustomerManagement/View/CustomersView.xaml
@@ -12,22 +12,26 @@
             <RowDefinition />
         </Grid.RowDefinitions>
 
-        <StackPanel Grid.Row="0" Orientation="Horizontal" Background="LightBlue">
-            <Button Name="NewCustomerButton" Grid.Column="0" Width="100" Margin="5" Content="New Customer" />
-            <Button Grid.Column="1" Width="100" Margin="5" Content="Edit Customer" />
-        </StackPanel>
+        <Grid Grid.Row="0" Background="LightBlue">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="120" />
+                <ColumnDefinition Width="120" />
+                <ColumnDefinition Width="120"/>
+                <ColumnDefinition />
+            </Grid.ColumnDefinitions>
+            
+            <TextBlock Grid.Column="0" Margin="5" Text="Customer View" VerticalAlignment="Center" FontWeight="Heavy" FontStyle="Italic" />
+            <Button Grid.Column="1" Content="New Customer" Command="{Binding AddCustomerCommand}" />
+            <Button Grid.Column="2" Content="Edit Customer" Command="{Binding EditCustomerCommand}" />
+        </Grid>
 
-        <DataGrid Grid.Row="1" ItemsSource="{Binding Customers}" AutoGenerateColumns="False" IsReadOnly="True" Name="CustomerTable">
+        <DataGrid Grid.Row="1" ItemsSource="{Binding Customers}" AutoGenerateColumns="False" IsReadOnly="True" SelectionMode="Single" SelectedItem="{Binding SelectedCustomer}" Name="CustomerTable">
             <DataGrid.Columns>
-                <DataGridTextColumn Header="First Name" Binding="{Binding FirstName}" />
-                <DataGridTextColumn Header="Last Name" Binding="{Binding LastName}" />
-                <!-- 
                 <DataGridTextColumn Header="Customer ID" Binding="{Binding Id, UpdateSourceTrigger=PropertyChanged}" />
                 <DataGridTextColumn Header="Account Name" Binding="{Binding CompanyName, UpdateSourceTrigger=PropertyChanged}" />
                 <DataGridTextColumn Header="Business Contact" Binding="{Binding BusinessContact, UpdateSourceTrigger=PropertyChanged}" />
                 <DataGridTextColumn Header="Email" Binding="{Binding EmailAddress, UpdateSourceTrigger=PropertyChanged}" />
                 <DataGridTextColumn Header="Phone" Binding="{Binding ContactNumber, UpdateSourceTrigger=PropertyChanged}" />
-                -->
             </DataGrid.Columns>
         </DataGrid>
     </Grid>
