--- a/Src/CustomerManagement/Styles/TextBoxStyles.xaml
+++ b/Src/CustomerManagement/Styles/TextBoxStyles.xaml
@@ -6,5 +6,25 @@
         <Setter Property="Margin" Value="10,5,10,5" />
         <Setter Property="VerticalContentAlignment" Value="Center" />
         <Setter Property="Padding" Value="5,0,5,0" />
+        
+        <Setter Property="Validation.ErrorTemplate">
+            <Setter.Value>
+                <ControlTemplate>
+                    <StackPanel>
+                        <AdornedElementPlaceholder x:Name="placeholder" />
+                        <TextBlock Foreground="Red" Text="{Binding ElementName=placeholder, Path=AdornedElement.(Validation.Errors)[0].ErrorContent}" Margin="3,0,0,0" />
+                    </StackPanel>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+        <Style.Triggers>
+            <Trigger Property="Validation.HasError" Value="True">
+                <!-- <Setter Property="Background" Value="Red" /> -->
+                <Setter Property="ToolTip" Value="{Binding RelativeSource={RelativeSource Self}, Path=(Validation.Errors)[0].ErrorContent}" />
+                <Setter Property="BorderBrush" Value="Red" />
+                <!-- 
+                <Setter Property="Margin" Value="0,0,0,20" /> -->
+            </Trigger>
+        </Style.Triggers>
     </Style>
 </ResourceDictionary>
