--- a/Src/CustomerManagement/View/Windows/NewCustomerWindow.xaml
+++ b/Src/CustomerManagement/View/Windows/NewCustomerWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:CustomerManagement.View.Windows"
         mc:Ignorable="d"
         WindowStartupLocation="CenterScreen"
-        Title="New Customer" Height="500" Width="450">
+        Title="New Customer" Height="500" Width="600">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="100"/>
@@ -31,7 +31,7 @@
         </StackPanel>
         
         <StackPanel Grid.Row="1" Grid.Column="1" HorizontalAlignment="Right" Width="225">
-            <TextBox Style="{StaticResource InputFormTextBox}" Text="{Binding ComanyName}" />
+            <TextBox Style="{StaticResource InputFormTextBox}" Text="{Binding CompanyName}" />
             <TextBox Style="{StaticResource InputFormTextBox}" Text="{Binding BusinessContact}" />
             <TextBox Style="{StaticResource InputFormTextBox}" Text="{Binding ContactNumber}"/>
             <TextBox Style="{StaticResource InputFormTextBox}" Text="{Binding EmailAddress}" />
