--- a/Src/CustomerManagement/Styles/TextBlockStyles.xaml
+++ b/Src/CustomerManagement/Styles/TextBlockStyles.xaml
@@ -12,4 +12,10 @@
         <Setter Property="FontStyle" Value="Italic" />
         <Setter Property="VerticalAlignment" Value="Center" />
     </Style>
+    <Style TargetType="TextBlock" x:Key="WindowHeaderTextBlock">
+        <Setter Property="Height" Value="40" />
+        <Setter Property="Margin" Value="15,0,0,0" />
+        <Setter Property="VerticalAlignment" Value="Center" />
+        <Setter Property="FontSize" Value="24" />
+    </Style>
 </ResourceDictionary>
