--- a/Src/CustomerManagement/MainWindow.xaml
+++ b/Src/CustomerManagement/MainWindow.xaml
@@ -16,6 +16,9 @@
         <DataTemplate DataType="{x:Type viewModel:ServicesViewModel}">
             <view:ServicesView />
         </DataTemplate>
+        <DataTemplate DataType="{x:Type viewModel:CustomerItemViewModel}">
+            <view:CustomerDetailsView />
+        </DataTemplate>
     </Window.Resources>
     <Grid>
         <Grid.RowDefinitions>
