--- a/Src/CustomerManagement/View/CustomerDetailsView.xaml
+++ b/Src/CustomerManagement/View/CustomerDetailsView.xaml
@@ -7,7 +7,11 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid Background="Blue">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="100" />
+            <ColumnDefinition />
+        </Grid.ColumnDefinitions>
         <TextBlock Text="Customer Details" />
-        <TextBlock Text="{Binding AccountName}" />
+        <TextBlock Grid.Row="0" Grid.Column="1" Text="{Binding CompanyName}" />
     </Grid>
 </UserControl>
