--- a/Src/CustomerManagement/View/CustomersView.xaml
+++ b/Src/CustomerManagement/View/CustomersView.xaml
@@ -24,7 +24,7 @@
             <TextBlock Grid.Column="0" Style="{StaticResource HeaderTextBlock}" Text="Customer View"  />
             <Button Grid.Column="1" Content="New Customer" Command="{Binding AddCustomerCommand}" />
             <Button Grid.Column="2" Content="Edit Customer" Command="{Binding EditCustomerCommand}" />
-            <Button Grid.Column="3" Content="Services" Command="{Binding NavigateServicesCommand}" />
+            <Button Grid.Column="3" Content="Customer Details" Command="{Binding NavigateCommand}" CommandParameter="{Binding SelectedCustomer}" />
         </Grid>
 
         <DataGrid Grid.Row="1" ItemsSource="{Binding Customers}" AutoGenerateColumns="False" IsReadOnly="True" SelectionMode="Single" SelectedItem="{Binding SelectedCustomer}">
