--- a/Src/CustomerManagement/MainWindow.xaml
+++ b/Src/CustomerManagement/MainWindow.xaml
@@ -16,7 +16,7 @@
         <DataTemplate DataType="{x:Type viewModel:ServicesViewModel}">
             <view:ServicesView />
         </DataTemplate>
-        <DataTemplate DataType="{x:Type viewModel:CustomerItemViewModel}">
+        <DataTemplate DataType="{x:Type viewModel:CustomerDetailsViewModel}">
             <view:CustomerDetailsView />
         </DataTemplate>
     </Window.Resources>
