--- a/Src/CustomerManagement/Styles/ButtonStyles.xaml
+++ b/Src/CustomerManagement/Styles/ButtonStyles.xaml
@@ -3,5 +3,6 @@
     <Style TargetType="Button">
         <Setter Property="Width" Value="110" />
         <Setter Property="Margin" Value="5" />
+        <Setter Property="VerticalContentAlignment" Value="Center"/>
     </Style>
 </ResourceDictionary>
