--- a/Src/CustomerManagement/App.xaml
+++ b/Src/CustomerManagement/App.xaml
@@ -8,6 +8,9 @@
                 <ResourceDictionary Source="Styles\TextBoxStyles.xaml" />
                 <ResourceDictionary Source="Styles\TextBlockStyles.xaml" />
                 <ResourceDictionary Source="Styles\ButtonStyles.xaml" />
+                <ResourceDictionary Source="Styles\TabItem.xaml" />
+                <ResourceDictionary Source="Styles\TabControl.xaml" />
+                <ResourceDictionary Source="Styles\Label.xaml" />
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
